--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "source/ReflectiveDLLInjection"]
-	path = source/ReflectiveDLLInjection
+	path = c/meterpreter/source/ReflectiveDLLInjection
 	url = https://github.com/rapid7/ReflectiveDLLInjection.git
 [submodule "deps"]
-	path = deps
+	path = c/meterpreter/deps
 	url = https://github.com/rapid7/meterpreter-deps
