--- a/java/androidpayload/app/pom.xml
+++ b/java/androidpayload/app/pom.xml
@@ -8,7 +8,7 @@
 	<name>AndroidPayload for Metasploit</name>
 
 	<properties>
-		<deploy.path>../metasploit-framework</deploy.path>
+		<deploy.path>../../metasploit-framework</deploy.path>
 	</properties>
 	<dependencies>
 		<dependency>
