--- a/java/androidpayload/ndkstager/pom.xml
+++ b/java/androidpayload/ndkstager/pom.xml
@@ -7,7 +7,7 @@
   <name>Android NDK Stager</name>
 
   <properties>
-    <deploy.path>../metasploit-framework</deploy.path>
+    <deploy.path>../../metasploit-framework</deploy.path>
   </properties>
   <dependencies>
     <dependency>
