--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,7 +9,7 @@
 	<url>http://www.metasploit.com/</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<deploy.path>../metasploit-framework</deploy.path>
+		<deploy.path>../../metasploit-framework</deploy.path>
 	</properties>
 	<dependencies>
 		<dependency>
